# CT2Rep

./: .env  .gitignore  Makefile  pyproject.toml
docker/: Dockerfile  docker-compose.debug.yml  docker-compose.yml
src/ct2rep/CT2Rep/: main.py
src/ct2rep/CT2Rep/models/: ct2rep.py
src/ct2rep/CT2Rep/modules/: att_model.py  caption_model.py  data_ct.py  dataloaders.py  datasets.py  encoder_decoder.py  metrics.py  tokenizers.py  trainer.py  visual_extractor.py
src/ct2rep/CT2RepLong/: main.py
src/ct2rep/CT2RepLong/models/: ct2rep_long.py
src/ct2rep/CT2RepLong/modules/: att_model.py  caption_model.py  data_ct.py  dataloaders.py  encoder_decoder.py  metrics.py  tokenizers.py  trainer.py  visual_extractor.py
src/ct2rep/ctvit/: setup.py
src/ct2rep/ctvit/ctvit/: __init__.py  attention.py  ctvit.py  t5.py
tests/CT2Rep/: test_main.py
tests/CT2Rep/ctvit/ctvit/: test_attention.py  test_ctvit.py  test_t5.py
tests/CT2Rep/modules/: test_att_model.py  test_caption_model.py  test_metrics.py  test_tokenizers.py  test_training.py  test_utils.py
